OERC-11: adding whitelist to survey merger

--- a/src/pretalx/orga/templates/orga/settings/form.html
+++ b/src/pretalx/orga/templates/orga/settings/form.html
@@ -101,6 +101,7 @@
               {% bootstrap_field form.pretix_qid_participant_list_organisation layout='event' %}
               {% bootstrap_field form.pretix_qid_participant_list_city layout='event' %}
               {% bootstrap_field form.pretix_qid_participant_list_postcode layout='event' %}
+              {% bootstrap_field form.survey_merger_pretix_qid_whitelist layout='event' %}
             </fieldset>
             <fieldset>
               <legend id="venueless">
