--- a/src/pretalx/cfp/templates/cfp/index.html
+++ b/src/pretalx/cfp/templates/cfp/index.html
@@ -4,6 +4,12 @@
 {% block title %}{% translate "Events" %}{% endblock %}
 
 {% block content %}
+
+    {% if widget_event and widget_event.pretix_ticket_shop_link and widget_event.pretix_ticket_shop_base_url %}
+      <script type="text/javascript" src="{{ widget_event.pretix_ticket_shop_base_url }}/widget/v1.en.js" async crossorigin></script>
+      <link rel="stylesheet" type="text/css" href="{{ widget_event.pretix_ticket_shop_link }}/widget/v1.css" crossorigin>
+    {% endif %}
+
     {% if registered_events or current_events or future_events or past_events %}
         <h1>{% translate "Events" %}</h1>
     {% endif %}
@@ -67,6 +73,11 @@
                         <i class="fa fa-ticket"></i>
                         {% translate 'Purchase ticket' %}
                       </a>
+                      <div class="invisible">
+                        <pretix-button event="{{ event.pretix_ticket_shop_link }}">
+                          Test Button
+                        </pretix-button>
+                      </div>
                     {% endif %}
                   </div>
                 </li>
@@ -147,6 +158,11 @@
                   <i class="fa fa-ticket"></i>
                   {% translate 'Purchase ticket' %}
                 </a>
+                <div class="invisible">
+                  <pretix-button event="{{ event.pretix_ticket_shop_link }}">
+                    Test Button
+                  </pretix-button>
+                </div>
                 {% endif %}
               </div>
             </li>
