OERC-31: adding widget to upcoming event button

--- a/src/pretalx/cfp/templates/cfp/index.html
+++ b/src/pretalx/cfp/templates/cfp/index.html
@@ -106,7 +106,7 @@
                 </a>
                 {% if event.pretix_ticket_shop_link %}
                 <a
-                  class="btn btn-outline-info m-1"
+                  class="btn btn-outline-info m-1 btn-pretix-purchase-ticket"
                   href="{{ event.pretix_ticket_shop_link }}"
                   data-toggle="tooltip"
                   data-placement="top"
