--- a/src/pretalx/common/templates/404.html
+++ b/src/pretalx/common/templates/404.html
@@ -2,14 +2,19 @@
 {% load i18n %}
 {% load static %}
 {% block title %}{{ phrases.base.not_found }}{% endblock %}
-{% block error_image %}<img loading="lazy" src="{% static "common/img/error_403.svg" %}" class="img" alt="{{ phrases.base.not_found }}">{% endblock %}
+{% block error_image %}
+  <!--
+  <img loading="lazy" src="{% static "common/img/error_403.svg" %}" class="img" alt="{{ phrases.base.not_found }}">
+  -->
+{% endblock %}
 {% block error_message %}
-    {{ phrases.base.not_found }}
+    {{ phrases.base.not_found_oercamp }}
     </h2>
     <h5>
         <p class="ml-auto mr-auto text-center">
-            {{ phrases.base.not_found_long }}
+            {{ phrases.base.not_found_long_oercamp }}
         </p>
     </h5>
+    <h2>
 {% endblock %}
 {% block error_code %}404{% endblock %}
