--- a/src/pretalx/common/templates/common/error.html
+++ b/src/pretalx/common/templates/common/error.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %} :: pretalx</title>
+        <title>{% block title %}{% endblock %}</title>
         {% compress css %}
             <link rel="stylesheet" type="text/x-scss" href="{% static "common/scss/error.scss" %}"/>
         {% endcompress %}
@@ -12,11 +12,13 @@
         <meta charset="UTF-8">
         {% include "common/includes/favicon.html" %}
     </head>
-    <body>
+    <body class="bg-white">
         <div id="wrapper">
             {% block error_image %}{% endblock %}
             <h2>{% block error_message %}{% endblock %}</h2>
+            <!--
             <h4 class="mt-4">HTTP {% block error_code %}{% endblock %}</h4>
+            -->
         </div>
     </body>
 </html>
