--- a/src/pretalx/static/common/scss/error.scss
+++ b/src/pretalx/static/common/scss/error.scss
@@ -20,7 +20,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
   z-index: 1000;
-  color: $white;
 }
 
 .img {
@@ -32,4 +31,8 @@ body {
 .card {
   padding: 10px;
   width: 20rem;
+}
+
+h1, h2, h3, h4, h5 {
+    color: $brand-primary;
 }
