--- a/src/pretalx/common/templates/common/error.html
+++ b/src/pretalx/common/templates/common/error.html
@@ -19,6 +19,8 @@
             <!--
             <h4 class="mt-4">HTTP {% block error_code %}{% endblock %}</h4>
             -->
+            <!-- hacky for now. TODO please implement as it should be-->
+            <a href="/">Zurück zur Startseite</a>
         </div>
     </body>
 </html>
