OERC-55: adding option to show shop link pretix_show_shop_link on events page

--- a/src/pretalx/orga/templates/orga/settings/form.html
+++ b/src/pretalx/orga/templates/orga/settings/form.html
@@ -88,6 +88,8 @@
               {% bootstrap_field form.pretix_api_organisator_slug layout='event' %}
               {% bootstrap_field form.pretix_api_event_slug layout='event' %}
 
+              {% bootstrap_field form.pretix_show_shop_link layout='event' %}
+
               {% bootstrap_field form.pretix_qid_organisation layout='event' %}
               {% bootstrap_field form.pretix_qid_postcode layout='event' %}
               {% bootstrap_field form.pretix_qid_city layout='event' %}
