OERC-55: fixing debug mode on live. Adding backup and infos to current nginx configuration.

--- a/src/pretalx/common/templates/common/error.html
+++ b/src/pretalx/common/templates/common/error.html
@@ -12,7 +12,7 @@
         <meta charset="UTF-8">
         {% include "common/includes/favicon.html" %}
     </head>
-    <body class="bg-white">
+    <body>
         <div id="wrapper">
             {% block error_image %}{% endblock %}
             <h2>{% block error_message %}{% endblock %}</h2>
