--- a/src/pretalx/common/templates/403.html
+++ b/src/pretalx/common/templates/403.html
@@ -2,7 +2,11 @@
 {% load i18n %}
 {% load static %}
 {% block title %}{{ phrases.base.permission_denied }}{% endblock %}
-{% block error_image %}<img loading="lazy" src="{% static "common/img/error_403.svg" %}" class="img" alt="{{ phrases.base.permission_denied }}">{% endblock %}
+{% block error_image %}
+  <!--
+  <img loading="lazy" src="{% static "common/img/error_403.svg" %}" class="img" alt="{{ phrases.base.permission_denied }}">
+  -->
+{% endblock %}
 {% block error_message %}
     {{ phrases.base.permission_denied }}
     </h2>
